fixed alignment of items on rsvp index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -188,7 +188,7 @@ header {
     width: 27px;
     height: 27px;
     margin: 9px;
-    margin-left: 15px;
+    margin-left: 18px;
   }
 
   .current-event {
