--- a/app/assets/stylesheets/rsvps.scss
+++ b/app/assets/stylesheets/rsvps.scss
@@ -143,7 +143,7 @@
   font-size: 10px;
   color: $darkgrey;
   height: 18px;
-  padding: 4.5px 27px !important;
+  padding: 4.5px 18px !important;
   border: none !important;
   margin-top: 18px;
 }
